--- a/File_Sorter/Automatic_File_Sorter_V3.6.ipynb
+++ b/File_Sorter/Automatic_File_Sorter_V3.6.ipynb
@@ -115,7 +115,7 @@
     "    'Installers': ('.exe', '.msi', '.zip', '.rar'),\n",
     "    'CSV': ('.csv',),\n",
     "    'Scripts': ('.py', '.sh', '.bat', '.ps1', '.js', '.rb', '.php'),\n",
-    "    'JNotebooks': ()\n",
+    "    'JNotebooks': ('.ipynb',)\n",
     "}"
    ]
   },
